tried to fix text overflow out of div

--- a/public/style/style.less
+++ b/public/style/style.less
@@ -126,6 +126,7 @@ header{
 	background-color: grey;
 	margin-top: 30px;
 	border-radius: 10px;
+	word-wrap: break-word;
 }
 
 a {
@@ -136,6 +137,9 @@ a {
 	color: white;
 	margin-top: 0px;
 	margin-bottom: 12px;
+	hyphens: auto;
+	padding-left: 5px;
+	padding-right: 5px;
 
 }
 
@@ -146,6 +150,8 @@ a {
 	font-size: 20px;
 	margin-top: 15px;
 	margin-bottom: 3px;
+	padding-left: 5px;
+	padding-right: 5px;
 	}
 
 .utilLogo{
